--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Advanced Tools Homework</title>
+
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+
+    <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">Neneemma Oguchi</a>
@@ -34,11 +41,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About me</a>
@@ -50,23 +55,40 @@
         </div>
       </div>
     </nav>
-    <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">Neneemma Oguchi</h1>
-    <h3 class="text-center">Front-end developer, based in Canada</h3>
-    <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
-    </div>
-    <div class="container">
+
+    <!-- Hero Section -->
+    <section class="text-center py-5 mt-5">
+      <h2>👋 Hi I am</h2>
+      <h1 class="display-4 display-md-1">Neneemma Oguchi</h1>
+      <h3 class="text-muted">Front-end developer, based in Canada</h3>
+
+      <div class="d-flex justify-content-center mt-4 flex-wrap">
+        <a
+          href="about.html#contact"
+          class="primary-link d-inline-block w-100 w-md-auto me-md-3 mb-2 mb-md-0"
+        >
+          Contact me
+        </a>
+        <a
+          href="about.html"
+          class="secondary-link d-inline-block w-100 w-md-auto"
+        >
+          About me
+        </a>
+      </div>
+    </section>
+
+    <!-- Projects Section -->
+    <div class="container py-5">
       <!-- Yoga App -->
       <div class="row align-items-center my-5">
-        <div class="col-12 col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+        <div class="col-12 col-md-6 mb-3 mb-md-0">
+          <img src="images/yoga.png" class="img-fluid rounded" alt="Yoga App" />
         </div>
         <div class="col-12 col-md-6">
-          <h2 class="mb-3">Yoga app</h2>
+          <h2>Yoga App</h2>
           <p>Welcome to your daily space of balance and renewal...</p>
-          <a href="#" class="primary-link d-inline-block mt-3"
+          <a href="#" class="primary-link d-inline-block w-100 w-md-auto mt-3"
             >Launch Yoga App</a
           >
         </div>
@@ -74,15 +96,19 @@
 
       <!-- Weather App -->
       <div class="row align-items-center my-5">
-        <div class="col-12 col-md-6 order-md-2">
-          <img src="images/weather.png" class="img-fluid rounded" />
+        <div class="col-12 col-md-6 order-md-2 mb-3 mb-md-0">
+          <img
+            src="images/weather.png"
+            class="img-fluid rounded"
+            alt="Weather App"
+          />
         </div>
         <div class="col-12 col-md-6 order-md-1">
-          <h2 class="mb-3">Weather app</h2>
+          <h2>Weather App</h2>
           <p>
             Stay prepared for every moment with your personal weather guide...
           </p>
-          <a href="#" class="primary-link d-inline-block mt-3"
+          <a href="#" class="primary-link d-inline-block w-100 w-md-auto mt-3"
             >Launch Weather App</a
           >
         </div>
@@ -90,13 +116,17 @@
 
       <!-- Yogurt App -->
       <div class="row align-items-center my-5">
-        <div class="col-12 col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+        <div class="col-12 col-md-6 mb-3 mb-md-0">
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded"
+            alt="Yogurt App"
+          />
         </div>
         <div class="col-12 col-md-6">
-          <h2 class="mb-3">Yogurt app</h2>
+          <h2>Yogurt App</h2>
           <p>Discover the creamy goodness of yogurt made just for you...</p>
-          <a href="#" class="primary-link d-inline-block mt-3"
+          <a href="#" class="primary-link d-inline-block w-100 w-md-auto mt-3"
             >Launch Yogurt App</a
           >
         </div>
