--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Hero Section -->
     <section class="text-center py-5 mt-5">
       <h2>👋 Hi I am</h2>
-      <h1 class="display-4 display-md-1">Neneemma Oguchi</h1>
+      <h1 class="text-center display-4 display-md-1">Neneemma Oguchi</h1>
       <h3 class="text-muted">Front-end developer, based in Canada</h3>
 
       <div class="d-flex justify-content-center mt-4 flex-wrap">
