--- a/index.html
+++ b/index.html
@@ -62,19 +62,21 @@
       <h1 class="text-center display-4 display-md-1">Neneemma Oguchi</h1>
       <h3 class="text-muted">Front-end developer, based in Canada</h3>
 
-      <div class="d-flex justify-content-center mt-4 flex-wrap">
-        <a
-          href="about.html#contact"
-          class="primary-link d-inline-block w-100 w-md-auto me-md-3 mb-2 mb-md-0"
-        >
-          Contact me
-        </a>
-        <a
-          href="about.html"
-          class="secondary-link d-inline-block w-100 w-md-auto"
-        >
-          About me
-        </a>
+      <div class="row">
+        <div class="d-flex justify-content-center mt-4 flex-wrap">
+          <a
+            href="about.html#contact"
+            class="primary-link d-inline-block w-100 w-md-auto me-md-3 mb-2 mb-md-0"
+          >
+            Contact me
+          </a>
+          <a
+            href="about.html"
+            class="secondary-link d-inline-block w-100 w-md-auto"
+          >
+            About me
+          </a>
+        </div>
       </div>
     </section>
 
