--- a/index.html
+++ b/index.html
@@ -60,10 +60,14 @@
     <section class="text-center py-5 mt-5">
       <h2>👋 Hi I am</h2>
       <h1 class="text-center display-4 display-md-1">Neneemma Oguchi</h1>
-      <h3 class="text-muted">Front-end developer, based in Canada</h3>
+      <h3 class="text-muted display-4 display-md-1">
+        Front-end developer, based in Canada
+      </h3>
 
       <div class="row">
-        <div class="d-flex justify-content-center mt-4 flex-wrap">
+        <div
+          class="d-flex justify-content-center mt-4 flex-column flex-sm-row gap-2"
+        >
           <a
             href="about.html#contact"
             class="primary-link d-inline-block w-100 w-md-auto me-md-3 mb-2 mb-md-0"
