--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
       </h3>
 
       <div class="row">
-        <div
-          class="d-flex justify-content-center mt-4 flex-column flex-sm-row gap-2"
-        >
+        <div class="d-flex justify-content-center mt-4 flex-wrap gap-2">
           <a
             href="about.html#contact"
             class="primary-link d-inline-block w-100 w-md-auto me-md-3 mb-2 mb-md-0"
