--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
         <div class="d-flex justify-content-center mt-4 gap-2">
           <a
             href="about.html#contact"
-            class="primary-link d-inline-block w-100 w-md-auto me-md-3 mb-2 mb-md-0"
+            class="primary-link d-flex align-items-center justify-content-center px-4"
           >
             Contact me
           </a>
           <a
             href="about.html"
-            class="secondary-link d-inline-block w-100 w-md-auto"
+            class="secondary-link d-flex align-items-center justify-content-center px-4"
           >
             About me
           </a>
